--- a/src/EditProfileDialog.ui
+++ b/src/EditProfileDialog.ui
@@ -7,11 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>594</width>
-    <height>551</height>
+    <height>562</height>
    </rect>
   </property>
   <layout class="QHBoxLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -23,7 +32,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -529,9 +538,6 @@
               <property name="text">
                <string comment="KDE::DoNotExtract">KSqueezedTextLabel</string>
               </property>
-              <property name="textElideMode">
-               <enum>Qt::ElideRight</enum>
-              </property>
              </widget>
             </item>
            </layout>
@@ -550,6 +556,9 @@
             </item>
             <item>
              <widget class="QDoubleSpinBox" name="fontSizeInput">
+              <property name="decimals">
+               <number>1</number>
+              </property>
               <property name="minimum">
                <double>4.000000000000000</double>
               </property>
@@ -558,9 +567,6 @@
               </property>
               <property name="singleStep">
                <double>1.000000000000000</double>
-              </property>
-              <property name="decimals">
-               <number>1</number>
               </property>
              </widget>
             </item>
@@ -600,6 +606,13 @@
            <widget class="QCheckBox" name="boldIntenseButton">
             <property name="text">
              <string>Draw intense colors in bold font</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="rainbowButton">
+            <property name="text">
+             <string>Rainbow Powers!</string>
             </property>
            </widget>
           </item>
